src/objects/Property_Audit__c.object
<CustomObject>
    <description>Used to hold results of property audits</description>
    <fields>
        <fullName>Audit_Date__c</fullName>
        <label>Audit Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BuildingOwnershipandOccupancyStatus__c</fullName>
        <label>Building Ownership and Occupancy Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>Owned and used by Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owned by Societyand leased to non-Society entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owned by Society,part used by Society,part leased to non-Society entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owned by non-Society entity and leased to Society</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GrossSqFtofSpaceoccupiedbySociety__c</fullName>
        <label>Gross Sq Ft of occupied by Society</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Land contact if applicable</description>
        <inlineHelpText>Land contact if applicable</inlineHelpText>
        <label>Landlord</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Property Audits (Landlord)</relationshipLabel>
        <relationshipName>R00N70000002GrwQEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contacts providing legal advice to the Society Description</description>
        <inlineHelpText>The contacts providing legal advice to the Society Description</inlineHelpText>
        <label>Legal advisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Propertys</relationshipLabel>
        <relationshipName>R00N70000002GrwGEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LocationDescription__c</fullName>
        <formula>Location__r.Name &amp; &quot; : &quot;  &amp; Location__r.Addess_Town__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Property Audits</relationshipLabel>
        <relationshipName>R00N70000002GNrgEAG</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LocationofsocietyOccupiedFloors__c</fullName>
        <label>Location of society Occupied Floors</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofFloors__c</fullName>
        <label>Number of Floors</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofFloorsoccupiedbySociety__c</fullName>
        <label>Number of Floors occupied by Society</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnedandusedbySociety__c</fullName>
        <label>Owned and used by Society</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audited By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000002GNrqEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Property Audit</label>
    <nameField>
        <displayFormat>PS{00000}</displayFormat>
        <label>Property Audit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>